package ru.david.room.json;

public class JSONParseException extends Exception {
    public JSONParseException(String message) {
        super(message);
    }
}
